[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/godot-xr-tools/objects/pickable.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/opengameart.org/animated-longbow/bow.glb" type="PackedScene" id=2]
[ext_resource path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/opengameart.org/animated-longbow/Material.material" type="Material" id=5]
[ext_resource path="res://objects/highlight_material.tres" type="Material" id=6]
[ext_resource path="res://addons/godot-xr-tools/hands/animations/left/Grip.anim" type="Animation" id=7]
[ext_resource path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" type="Script" id=8]
[ext_resource path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" type="Script" id=9]
[ext_resource path="res://addons/godot-xr-tools/hands/animations/right/Grip.anim" type="Animation" id=10]
[ext_resource path="res://objects/livestream-bow/Bow.gd" type="Script" id=11]
[ext_resource path="res://addons/godot-xr-tools/objects/snap_zone.tscn" type="PackedScene" id=12]

[sub_resource type="ConvexPolygonShape" id=1]
margin = 0.005
points = PoolVector3Array( -0.0114714, -0.148523, -3.82978, 1.68768, 0.0762364, 0.631291, 1.68768, -0.077179, 0.631291, 0.613363, 0.152989, 5.581, 1.34203, 0.114635, -6.65612, -0.154399, 0.2115, -0.936628, -0.0114714, -0.148523, 3.82978, 1.6873, -0.0771339, 7.00071, 1.41882, -0.115578, -6.46453, 0.229975, -0.230684, 1.01448, 1.41882, 0.11459, 6.54172, -0.0147769, 0.148242, -3.84688, 0.229975, 0.229742, -1.01723, 1.68768, 0.0762364, -7.00071, -0.0502351, 0.147891, 3.57929, -0.150472, -0.2115, -0.932463, 0.61355, -0.153932, -5.5424, 0.613363, -0.153932, 5.5424, 1.68768, -0.077179, -7.00071, 0.61355, 0.152989, -5.581, 1.6873, 0.0761913, 7.00071, 1.41882, -0.115533, 6.50312, -0.154399, 0.2115, 0.93409, -0.150472, -0.2115, 0.929936, 0.229975, -0.230684, -1.01723, 0.229975, 0.229742, 1.01448, 1.41882, 0.114635, -6.46453, 1.07373, -0.115533, 6.42593, 1.26561, 0.11459, 6.65612, -0.11718, 0.175773, -2.27206, 0.268464, -0.192286, 3.51069, 0.268464, 0.191343, -3.54791, 0.268464, -0.192286, -3.50932, 0.268464, 0.191343, 3.54929, -0.113507, -0.175914, 2.26426, -0.0147769, 0.148242, 3.84688, -0.0502678, -0.148874, -3.57895, 1.34203, -0.115578, -6.61753, 0.805057, -0.153932, -5.428, 0.805057, 0.152989, 5.46659, 0.805057, -0.153932, 5.428, -0.117173, 0.175736, 2.27412, 0.766568, 0.152989, -5.50381, 1.07373, 0.11459, 6.42593, -0.0502351, -0.148834, 3.57929, -0.113514, -0.175952, -2.26222, 1.22731, -0.115533, 6.61615, -0.0502678, 0.147932, -3.57895 )

[sub_resource type="Resource" id=2]
script = ExtResource( 9 )
open_pose = ExtResource( 7 )
closed_pose = ExtResource( 7 )

[sub_resource type="Resource" id=3]
script = ExtResource( 9 )
open_pose = ExtResource( 10 )
closed_pose = ExtResource( 10 )

[sub_resource type="ArrayMesh" id=4]
resource_name = "bow_Cube"
surfaces/0 = {
"aabb": AABB( -0.211496, -0.211496, -7.02151, 1.89218, 0.422993, 14.043 ),
"array_data": PoolByteArray( 156, 182, 52, 190, 176, 182, 52, 62, 234, 216, 14, 64, 194, 61, 3, 62, 166, 52, 233, 59, 0, 1, 0, 0, 30, 246, 224, 9, 0, 0, 0, 0, 156, 182, 52, 190, 176, 182, 52, 62, 234, 216, 14, 64, 194, 61, 7, 63, 166, 52, 129, 58, 0, 1, 0, 0, 30, 246, 224, 9, 0, 0, 0, 0, 164, 182, 52, 62, 176, 182, 52, 62, 234, 216, 14, 64, 63, 64, 2, 63, 170, 52, 143, 59, 0, 1, 0, 0, 38, 246, 216, 9, 0, 0, 0, 0, 156, 182, 52, 190, 144, 182, 52, 190, 234, 216, 14, 64, 194, 195, 4, 64, 163, 52, 219, 58, 0, 1, 0, 0, 30, 246, 224, 9, 0, 0, 0, 0, 164, 182, 52, 62, 144, 182, 52, 190, 234, 216, 14, 64, 63, 192, 3, 64, 169, 52, 53, 59, 0, 1, 0, 0, 38, 246, 216, 9, 0, 0, 0, 0, 8, 64, 198, 188, 0, 179, 23, 62, 74, 219, 118, 64, 198, 56, 17, 61, 247, 55, 211, 59, 0, 1, 0, 0, 151, 236, 103, 19, 0, 0, 0, 0, 8, 64, 198, 188, 0, 179, 23, 62, 74, 219, 118, 64, 198, 56, 22, 64, 248, 55, 150, 58, 0, 1, 0, 0, 151, 236, 103, 19, 0, 0, 0, 0, 75, 30, 136, 62, 0, 179, 23, 62, 18, 253, 114, 64, 65, 69, 15, 63, 237, 55, 132, 59, 0, 1, 0, 0, 8, 237, 246, 18, 0, 0, 0, 0, 8, 64, 198, 188, 192, 178, 23, 190, 74, 219, 118, 64, 198, 200, 19, 65, 242, 55, 229, 58, 0, 1, 0, 0, 151, 236, 103, 19, 0, 0, 0, 0, 75, 30, 136, 62, 192, 178, 23, 190, 18, 253, 114, 64, 65, 187, 17, 64, 236, 55, 52, 59, 0, 1, 0, 0, 8, 237, 246, 18, 0, 0, 0, 0, 71, 144, 181, 62, 128, 204, 2, 62, 89, 203, 163, 64, 205, 52, 39, 64, 91, 57, 168, 58, 0, 1, 0, 0, 145, 228, 109, 27, 0, 0, 0, 0, 71, 144, 181, 62, 128, 204, 2, 62, 89, 203, 163, 64, 205, 52, 32, 60, 92, 57, 191, 59, 0, 1, 0, 0, 145, 228, 109, 27, 0, 0, 0, 0, 230, 253, 22, 63, 128, 204, 2, 62, 93, 154, 160, 64, 68, 75, 32, 63, 86, 57, 121, 59, 0, 1, 0, 0, 145, 228, 109, 27, 0, 0, 0, 0, 71, 144, 181, 62, 128, 204, 2, 190, 89, 203, 163, 64, 205, 204, 35, 65, 87, 57, 237, 58, 0, 1, 0, 0, 145, 228, 109, 27, 0, 0, 0, 0, 230, 253, 22, 63, 128, 204, 2, 190, 93, 154, 160, 64, 68, 181, 33, 64, 84, 57, 52, 59, 0, 1, 0, 0, 145, 228, 109, 27, 0, 0, 0, 0, 227, 207, 111, 63, 128, 220, 195, 61, 1, 150, 197, 64, 212, 51, 53, 64, 157, 58, 203, 58, 0, 1, 0, 0, 235, 221, 19, 34, 0, 0, 0, 0, 227, 207, 111, 63, 128, 220, 195, 61, 1, 150, 197, 64, 212, 51, 43, 59, 159, 58, 152, 59, 0, 1, 0, 0, 235, 221, 19, 34, 0, 0, 0, 0, 25, 123, 140, 63, 0, 220, 195, 61, 201, 68, 194, 64, 71, 80, 43, 63, 153, 58, 101, 59, 0, 1, 0, 0, 186, 220, 68, 35, 0, 0, 0, 0, 227, 207, 111, 63, 0, 220, 195, 189, 1, 150, 197, 64, 212, 205, 46, 66, 153, 58, 255, 58, 0, 1, 0, 0, 235, 221, 19, 34, 0, 0, 0, 0, 25, 123, 140, 63, 0, 220, 195, 189, 201, 68, 194, 64, 71, 176, 45, 65, 151, 58, 49, 59, 0, 1, 0, 0, 186, 220, 68, 35, 0, 0, 0, 0, 150, 117, 172, 63, 128, 90, 151, 61, 7, 4, 214, 64, 217, 52, 60, 65, 75, 59, 226, 58, 0, 1, 0, 0, 123, 213, 131, 42, 0, 0, 0, 0, 150, 117, 172, 63, 128, 90, 151, 61, 7, 4, 214, 64, 217, 52, 49, 59, 76, 59, 125, 59, 0, 1, 0, 0, 123, 213, 131, 42, 0, 0, 0, 0, 213, 233, 183, 63, 128, 90, 151, 61, 87, 64, 210, 64, 73, 82, 49, 63, 61, 59, 88, 59, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 150, 117, 172, 63, 0, 90, 151, 189, 7, 4, 214, 64, 217, 204, 53, 66, 71, 59, 10, 59, 0, 1, 0, 0, 123, 213, 131, 42, 0, 0, 0, 0, 213, 233, 183, 63, 0, 90, 151, 189, 87, 64, 210, 64, 73, 174, 51, 65, 60, 59, 48, 59, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 192, 224, 209, 63, 128, 85, 129, 61, 63, 176, 224, 64, 13, 45, 48, 37, 193, 59, 107, 59, 0, 1, 0, 0, 80, 213, 174, 42, 0, 0, 0, 0, 192, 224, 209, 63, 128, 85, 129, 61, 63, 176, 224, 64, 13, 45, 69, 42, 193, 59, 241, 58, 0, 1, 0, 0, 80, 213, 174, 42, 0, 0, 0, 0, 192, 224, 209, 63, 128, 85, 129, 61, 63, 176, 224, 64, 13, 45, 183, 102, 218, 59, 38, 59, 0, 1, 0, 0, 80, 213, 174, 42, 0, 0, 0, 0, 142, 32, 215, 63, 128, 85, 129, 61, 165, 221, 220, 64, 75, 60, 26, 53, 172, 59, 80, 59, 0, 1, 0, 0, 83, 213, 172, 42, 0, 0, 0, 0, 142, 32, 215, 63, 128, 85, 129, 61, 165, 221, 220, 64, 75, 60, 224, 88, 199, 59, 66, 59, 0, 1, 0, 0, 83, 213, 172, 42, 0, 0, 0, 0, 192, 224, 209, 63, 0, 85, 129, 189, 63, 176, 224, 64, 13, 211, 33, 93, 190, 59, 19, 59, 0, 1, 0, 0, 80, 213, 174, 42, 0, 0, 0, 0, 142, 32, 215, 63, 0, 85, 129, 189, 165, 221, 220, 64, 75, 196, 31, 77, 171, 59, 47, 59, 0, 1, 0, 0, 83, 213, 172, 42, 0, 0, 0, 0, 160, 182, 52, 190, 96, 182, 52, 62, 32, 142, 218, 52, 193, 63, 0, 63, 141, 34, 129, 58, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 160, 182, 52, 190, 96, 182, 52, 62, 32, 142, 218, 52, 193, 63, 0, 63, 174, 34, 233, 59, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 160, 182, 52, 190, 96, 182, 52, 62, 32, 142, 218, 52, 193, 63, 0, 63, 217, 59, 82, 58, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 160, 182, 52, 190, 96, 182, 52, 62, 32, 142, 218, 52, 193, 63, 0, 63, 218, 59, 234, 56, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 164, 182, 52, 190, 96, 182, 52, 62, 228, 216, 14, 192, 191, 64, 249, 63, 161, 57, 234, 56, 0, 1, 0, 0, 38, 246, 216, 9, 0, 0, 0, 0, 164, 182, 52, 190, 96, 182, 52, 62, 228, 216, 14, 192, 191, 64, 253, 64, 161, 57, 82, 58, 0, 1, 0, 0, 38, 246, 216, 9, 0, 0, 0, 0, 156, 182, 52, 62, 96, 182, 52, 62, 228, 216, 14, 192, 62, 63, 254, 63, 159, 57, 248, 57, 0, 1, 0, 0, 38, 246, 216, 9, 0, 0, 0, 0, 160, 182, 52, 62, 96, 182, 52, 62, 224, 113, 213, 52, 63, 63, 0, 63, 173, 34, 143, 59, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 160, 182, 52, 62, 96, 182, 52, 62, 224, 113, 213, 52, 63, 63, 0, 63, 217, 59, 248, 57, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 160, 182, 52, 190, 156, 182, 52, 190, 32, 142, 234, 52, 193, 193, 0, 63, 151, 34, 220, 58, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 160, 182, 52, 190, 156, 182, 52, 190, 32, 142, 234, 52, 193, 193, 0, 63, 218, 59, 69, 57, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 164, 182, 52, 190, 224, 182, 52, 190, 228, 216, 14, 192, 191, 192, 252, 62, 162, 57, 68, 57, 0, 1, 0, 0, 38, 246, 216, 9, 0, 0, 0, 0, 156, 182, 52, 62, 224, 182, 52, 190, 228, 216, 14, 192, 62, 193, 253, 62, 160, 57, 158, 57, 0, 1, 0, 0, 38, 246, 216, 9, 0, 0, 0, 0, 160, 182, 52, 62, 156, 182, 52, 190, 224, 113, 229, 52, 63, 193, 0, 63, 166, 34, 53, 59, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 160, 182, 52, 62, 156, 182, 52, 190, 224, 113, 229, 52, 63, 193, 0, 63, 217, 59, 159, 57, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 120, 64, 198, 188, 160, 178, 23, 62, 68, 219, 118, 192, 186, 68, 234, 62, 240, 55, 0, 57, 0, 1, 0, 0, 0, 237, 254, 18, 0, 0, 0, 0, 120, 64, 198, 188, 160, 178, 23, 62, 68, 219, 118, 192, 186, 68, 239, 65, 241, 55, 60, 58, 0, 1, 0, 0, 0, 237, 254, 18, 0, 0, 0, 0, 69, 30, 136, 62, 144, 178, 23, 62, 12, 253, 114, 192, 57, 61, 241, 63, 251, 55, 238, 57, 0, 1, 0, 0, 8, 237, 246, 18, 0, 0, 0, 0, 120, 64, 198, 188, 48, 179, 23, 190, 68, 219, 118, 192, 186, 188, 237, 61, 246, 55, 78, 57, 0, 1, 0, 0, 0, 237, 254, 18, 0, 0, 0, 0, 69, 30, 136, 62, 48, 179, 23, 190, 12, 253, 114, 192, 57, 195, 239, 62, 252, 55, 157, 57, 0, 1, 0, 0, 8, 237, 246, 18, 0, 0, 0, 0, 61, 144, 181, 62, 0, 204, 2, 62, 86, 203, 163, 192, 182, 75, 224, 66, 48, 53, 40, 58, 0, 1, 0, 0, 135, 228, 119, 27, 0, 0, 0, 0, 61, 144, 181, 62, 0, 204, 2, 62, 86, 203, 163, 192, 182, 75, 217, 62, 50, 53, 17, 57, 0, 1, 0, 0, 135, 228, 119, 27, 0, 0, 0, 0, 226, 253, 22, 63, 64, 204, 2, 62, 90, 154, 160, 192, 51, 58, 224, 63, 60, 53, 226, 57, 0, 1, 0, 0, 145, 228, 109, 27, 0, 0, 0, 0, 61, 144, 181, 62, 192, 204, 2, 190, 85, 203, 163, 192, 182, 181, 221, 61, 57, 53, 86, 57, 0, 1, 0, 0, 135, 228, 119, 27, 0, 0, 0, 0, 226, 253, 22, 63, 192, 204, 2, 190, 89, 154, 160, 192, 51, 198, 223, 62, 63, 53, 157, 57, 0, 1, 0, 0, 145, 228, 109, 27, 0, 0, 0, 0, 221, 207, 111, 63, 128, 219, 195, 61, 255, 149, 197, 192, 181, 82, 213, 67, 85, 49, 1, 58, 0, 1, 0, 0, 175, 220, 79, 35, 0, 0, 0, 0, 221, 207, 111, 63, 128, 219, 195, 61, 255, 149, 197, 192, 181, 82, 203, 62, 91, 49, 52, 57, 0, 1, 0, 0, 175, 220, 79, 35, 0, 0, 0, 0, 23, 123, 140, 63, 128, 219, 195, 61, 199, 68, 194, 192, 46, 55, 213, 63, 109, 49, 207, 57, 0, 1, 0, 0, 175, 220, 79, 35, 0, 0, 0, 0, 221, 207, 111, 63, 128, 220, 195, 189, 1, 150, 197, 192, 181, 174, 210, 60, 108, 49, 104, 57, 0, 1, 0, 0, 175, 220, 79, 35, 0, 0, 0, 0, 23, 123, 140, 63, 128, 220, 195, 189, 201, 68, 194, 192, 46, 201, 211, 61, 116, 49, 155, 57, 0, 1, 0, 0, 175, 220, 79, 35, 0, 0, 0, 0, 146, 117, 172, 63, 128, 89, 151, 61, 5, 4, 214, 192, 182, 87, 207, 67, 64, 45, 230, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 146, 117, 172, 63, 128, 89, 151, 61, 5, 4, 214, 192, 182, 87, 196, 61, 72, 45, 76, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 211, 233, 183, 63, 128, 89, 151, 61, 85, 64, 210, 192, 44, 53, 207, 63, 182, 45, 193, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 146, 117, 172, 63, 0, 91, 151, 189, 5, 4, 214, 192, 182, 169, 203, 60, 103, 45, 115, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 211, 233, 183, 63, 0, 91, 151, 189, 85, 64, 210, 192, 44, 203, 205, 61, 195, 45, 154, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 188, 224, 209, 63, 128, 84, 129, 61, 61, 176, 224, 192, 81, 113, 73, 24, 141, 34, 143, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 188, 224, 209, 63, 128, 84, 129, 61, 61, 176, 224, 192, 81, 113, 187, 84, 94, 38, 90, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 188, 224, 209, 63, 128, 84, 129, 61, 61, 176, 224, 192, 81, 113, 208, 89, 99, 38, 212, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 138, 32, 215, 63, 128, 84, 129, 61, 163, 221, 220, 192, 66, 51, 32, 38, 170, 37, 171, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 138, 32, 215, 63, 128, 84, 129, 61, 163, 221, 220, 192, 66, 51, 230, 73, 130, 40, 186, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 188, 224, 209, 63, 0, 86, 129, 189, 61, 176, 224, 192, 81, 143, 223, 33, 203, 38, 124, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 138, 32, 215, 63, 0, 86, 129, 189, 163, 221, 220, 192, 66, 205, 225, 49, 151, 40, 152, 57, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 126, 146, 88, 190, 136, 146, 88, 190, 189, 17, 129, 63, 214, 214, 225, 95, 200, 44, 222, 51, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 126, 146, 88, 190, 136, 146, 88, 190, 189, 17, 129, 63, 214, 214, 161, 15, 92, 49, 229, 48, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 126, 146, 88, 190, 136, 146, 88, 190, 189, 17, 129, 63, 214, 214, 161, 15, 93, 49, 50, 56, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 130, 146, 88, 190, 136, 146, 88, 190, 189, 17, 129, 191, 172, 172, 95, 111, 226, 56, 227, 48, 0, 1, 0, 0, 250, 250, 5, 5, 0, 0, 0, 0, 130, 146, 88, 190, 136, 146, 88, 190, 189, 17, 129, 191, 172, 172, 95, 111, 226, 56, 49, 56, 0, 1, 0, 0, 250, 250, 5, 5, 0, 0, 0, 0, 130, 146, 88, 190, 136, 146, 88, 190, 189, 17, 129, 191, 172, 172, 31, 31, 160, 57, 220, 51, 0, 1, 0, 0, 250, 250, 5, 5, 0, 0, 0, 0, 134, 146, 88, 62, 136, 146, 88, 190, 189, 17, 129, 191, 84, 172, 161, 111, 226, 56, 231, 54, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 134, 146, 88, 62, 136, 146, 88, 190, 189, 17, 129, 191, 84, 172, 225, 31, 160, 57, 106, 53, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 138, 146, 88, 62, 136, 146, 88, 190, 189, 17, 129, 63, 42, 214, 31, 95, 201, 44, 107, 53, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 138, 146, 88, 62, 136, 146, 88, 190, 189, 17, 129, 63, 42, 214, 95, 15, 93, 49, 231, 54, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 126, 146, 88, 190, 136, 146, 88, 62, 189, 17, 129, 63, 214, 42, 180, 120, 93, 49, 222, 51, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 130, 146, 88, 190, 136, 146, 88, 62, 189, 17, 129, 191, 172, 84, 76, 6, 226, 56, 220, 51, 0, 1, 0, 0, 250, 250, 5, 5, 0, 0, 0, 0, 134, 146, 88, 62, 136, 146, 88, 62, 189, 17, 129, 191, 84, 84, 180, 6, 226, 56, 106, 53, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 138, 146, 88, 62, 136, 146, 88, 62, 189, 17, 129, 63, 42, 42, 76, 120, 93, 49, 107, 53, 0, 1, 0, 0, 250, 250, 4, 5, 0, 0, 0, 0, 246, 167, 203, 63, 96, 128, 149, 188, 183, 20, 221, 64, 214, 214, 225, 95, 25, 36, 49, 41, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 246, 167, 203, 63, 96, 128, 149, 188, 183, 20, 221, 64, 214, 214, 161, 15, 195, 37, 94, 40, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 242, 167, 203, 63, 96, 128, 149, 188, 183, 20, 221, 192, 172, 172, 95, 111, 210, 59, 68, 40, 0, 1, 0, 0, 76, 213, 178, 42, 0, 0, 0, 0, 242, 167, 203, 63, 96, 128, 149, 188, 183, 20, 221, 192, 172, 172, 31, 31, 223, 59, 25, 41, 0, 1, 0, 0, 76, 213, 178, 42, 0, 0, 0, 0, 246, 83, 208, 63, 96, 128, 149, 188, 183, 20, 221, 192, 84, 172, 161, 111, 209, 59, 192, 42, 0, 1, 0, 0, 53, 213, 201, 42, 0, 0, 0, 0, 246, 83, 208, 63, 96, 128, 149, 188, 183, 20, 221, 192, 84, 172, 161, 111, 210, 59, 224, 38, 0, 1, 0, 0, 53, 213, 201, 42, 0, 0, 0, 0, 246, 83, 208, 63, 96, 128, 149, 188, 183, 20, 221, 192, 84, 172, 225, 31, 223, 59, 237, 41, 0, 1, 0, 0, 53, 213, 201, 42, 0, 0, 0, 0, 250, 83, 208, 63, 96, 128, 149, 188, 183, 20, 221, 64, 42, 214, 31, 95, 24, 36, 5, 42, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 250, 83, 208, 63, 96, 128, 149, 188, 183, 20, 221, 64, 42, 214, 95, 15, 190, 37, 219, 42, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 250, 83, 208, 63, 96, 128, 149, 188, 183, 20, 221, 64, 42, 214, 95, 15, 196, 37, 21, 39, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 246, 167, 203, 63, 64, 128, 149, 60, 183, 20, 221, 64, 214, 42, 180, 120, 193, 37, 50, 41, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 242, 167, 203, 63, 64, 128, 149, 60, 183, 20, 221, 192, 172, 84, 76, 6, 209, 59, 24, 41, 0, 1, 0, 0, 76, 213, 178, 42, 0, 0, 0, 0, 246, 83, 208, 63, 64, 128, 149, 60, 183, 20, 221, 192, 84, 84, 180, 6, 209, 59, 236, 41, 0, 1, 0, 0, 53, 213, 201, 42, 0, 0, 0, 0, 250, 83, 208, 63, 64, 128, 149, 60, 183, 20, 221, 64, 42, 42, 76, 120, 192, 37, 6, 42, 0, 1, 0, 0, 84, 213, 170, 42, 0, 0, 0, 0, 72, 177, 200, 63, 154, 214, 39, 189, 7, 205, 29, 63, 214, 214, 161, 95, 242, 58, 21, 49, 0, 1, 0, 0, 0, 128, 254, 127, 0, 0, 0, 0, 72, 177, 200, 63, 154, 214, 39, 189, 7, 205, 29, 63, 214, 214, 63, 31, 28, 59, 190, 49, 0, 1, 0, 0, 0, 128, 254, 127, 0, 0, 0, 0, 72, 177, 200, 63, 154, 214, 39, 189, 9, 205, 29, 191, 172, 172, 193, 79, 242, 58, 20, 56, 0, 1, 0, 0, 8, 128, 246, 127, 0, 0, 0, 0, 72, 177, 200, 63, 154, 214, 39, 189, 9, 205, 29, 191, 172, 172, 63, 31, 28, 59, 211, 55, 0, 1, 0, 0, 8, 128, 246, 127, 0, 0, 0, 0, 176, 46, 211, 63, 154, 214, 39, 189, 9, 205, 29, 191, 84, 172, 63, 111, 157, 58, 211, 55, 0, 1, 0, 0, 7, 128, 247, 127, 0, 0, 0, 0, 176, 46, 211, 63, 154, 214, 39, 189, 9, 205, 29, 191, 84, 172, 161, 31, 199, 58, 20, 56, 0, 1, 0, 0, 7, 128, 247, 127, 0, 0, 0, 0, 176, 46, 211, 63, 154, 214, 39, 189, 9, 205, 29, 191, 84, 172, 63, 79, 70, 59, 211, 55, 0, 1, 0, 0, 7, 128, 247, 127, 0, 0, 0, 0, 176, 46, 211, 63, 154, 214, 39, 189, 7, 205, 29, 63, 42, 214, 31, 95, 157, 58, 190, 49, 0, 1, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 176, 46, 211, 63, 154, 214, 39, 189, 7, 205, 29, 63, 42, 214, 193, 47, 199, 58, 21, 49, 0, 1, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 176, 46, 211, 63, 154, 214, 39, 189, 7, 205, 29, 63, 42, 214, 95, 95, 70, 59, 190, 49, 0, 1, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 72, 177, 200, 63, 154, 214, 39, 61, 7, 205, 29, 63, 214, 42, 180, 31, 242, 58, 190, 49, 0, 1, 0, 0, 0, 128, 254, 127, 0, 0, 0, 0, 72, 177, 200, 63, 154, 214, 39, 61, 9, 205, 29, 191, 172, 84, 193, 38, 242, 58, 211, 55, 0, 1, 0, 0, 8, 128, 246, 127, 0, 0, 0, 0, 176, 46, 211, 63, 154, 214, 39, 61, 9, 205, 29, 191, 84, 84, 180, 95, 199, 58, 211, 55, 0, 1, 0, 0, 7, 128, 247, 127, 0, 0, 0, 0, 176, 46, 211, 63, 154, 214, 39, 61, 7, 205, 29, 63, 42, 42, 193, 88, 199, 58, 190, 49, 0, 1, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 244, 167, 203, 63, 64, 128, 149, 60, 253, 211, 24, 63, 193, 63, 130, 1, 77, 54, 23, 41, 0, 1, 0, 0, 4, 128, 250, 127, 0, 0, 0, 0, 244, 167, 203, 63, 96, 128, 149, 188, 253, 211, 24, 63, 193, 193, 126, 1, 77, 54, 67, 40, 0, 1, 0, 0, 4, 128, 250, 127, 0, 0, 0, 0, 248, 83, 208, 63, 64, 128, 149, 60, 253, 211, 24, 63, 63, 63, 130, 126, 77, 54, 236, 41, 0, 1, 0, 0, 2, 128, 252, 127, 0, 0, 0, 0, 248, 83, 208, 63, 96, 128, 149, 188, 253, 211, 24, 63, 63, 193, 126, 126, 77, 54, 192, 42, 0, 1, 0, 0, 2, 128, 252, 127, 0, 0, 0, 0, 248, 83, 208, 63, 96, 128, 149, 188, 253, 211, 24, 63, 63, 193, 126, 126, 77, 54, 221, 38, 0, 1, 0, 0, 2, 128, 252, 127, 0, 0, 0, 0, 248, 83, 208, 63, 64, 128, 149, 60, 221, 116, 24, 191, 63, 63, 130, 126, 217, 56, 6, 42, 0, 1, 0, 0, 104, 129, 150, 126, 0, 0, 0, 0, 244, 167, 203, 63, 96, 128, 149, 188, 221, 116, 24, 191, 193, 193, 126, 1, 217, 56, 93, 40, 0, 1, 0, 0, 108, 129, 146, 126, 0, 0, 0, 0, 248, 83, 208, 63, 96, 128, 149, 188, 221, 116, 24, 191, 63, 193, 126, 126, 217, 56, 218, 42, 0, 1, 0, 0, 104, 129, 150, 126, 0, 0, 0, 0, 248, 83, 208, 63, 96, 128, 149, 188, 221, 116, 24, 191, 63, 193, 126, 126, 217, 56, 17, 39, 0, 1, 0, 0, 104, 129, 150, 126, 0, 0, 0, 0, 244, 167, 203, 63, 64, 128, 149, 60, 221, 116, 24, 191, 193, 63, 130, 1, 217, 56, 49, 41, 0, 1, 0, 0, 108, 129, 146, 126, 0, 0, 0, 0, 128, 146, 88, 190, 136, 146, 88, 62, 40, 251, 195, 49, 193, 63, 126, 126, 57, 54, 221, 51, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 128, 146, 88, 190, 136, 146, 88, 190, 42, 251, 195, 49, 193, 193, 130, 126, 57, 54, 228, 48, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 128, 146, 88, 190, 136, 146, 88, 190, 42, 251, 195, 49, 193, 193, 130, 126, 57, 54, 50, 56, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 136, 146, 88, 62, 136, 146, 88, 62, 50, 251, 195, 177, 63, 63, 126, 1, 57, 54, 107, 53, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0, 136, 146, 88, 62, 136, 146, 88, 190, 48, 251, 195, 177, 63, 193, 130, 1, 57, 54, 231, 54, 0, 1, 0, 0, 118, 253, 136, 2, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 41, 0, 32, 0, 3, 0, 2, 0, 7, 0, 0, 0, 4, 0, 39, 0, 45, 0, 33, 0, 2, 0, 0, 0, 45, 0, 3, 0, 4, 0, 7, 0, 12, 0, 5, 0, 1, 0, 8, 0, 3, 0, 3, 0, 9, 0, 4, 0, 4, 0, 7, 0, 2, 0, 12, 0, 17, 0, 11, 0, 6, 0, 13, 0, 8, 0, 8, 0, 14, 0, 9, 0, 9, 0, 12, 0, 7, 0, 17, 0, 22, 0, 16, 0, 18, 0, 19, 0, 13, 0, 14, 0, 17, 0, 12, 0, 10, 0, 18, 0, 13, 0, 22, 0, 28, 0, 21, 0, 19, 0, 24, 0, 17, 0, 15, 0, 23, 0, 18, 0, 18, 0, 24, 0, 19, 0, 30, 0, 27, 0, 31, 0, 20, 0, 26, 0, 23, 0, 23, 0, 31, 0, 24, 0, 24, 0, 28, 0, 22, 0, 42, 0, 36, 0, 35, 0, 38, 0, 37, 0, 49, 0, 44, 0, 40, 0, 38, 0, 34, 0, 38, 0, 40, 0, 46, 0, 43, 0, 42, 0, 49, 0, 48, 0, 54, 0, 36, 0, 50, 0, 47, 0, 43, 0, 51, 0, 50, 0, 44, 0, 49, 0, 51, 0, 54, 0, 52, 0, 59, 0, 47, 0, 55, 0, 53, 0, 50, 0, 56, 0, 55, 0, 51, 0, 49, 0, 56, 0, 59, 0, 57, 0, 64, 0, 56, 0, 61, 0, 55, 0, 56, 0, 59, 0, 61, 0, 53, 0, 55, 0, 58, 0, 64, 0, 62, 0, 71, 0, 61, 0, 64, 0, 66, 0, 58, 0, 60, 0, 63, 0, 60, 0, 66, 0, 65, 0, 72, 0, 73, 0, 67, 0, 63, 0, 65, 0, 68, 0, 65, 0, 73, 0, 72, 0, 66, 0, 64, 0, 73, 0, 126, 0, 77, 0, 85, 0, 85, 0, 81, 0, 86, 0, 129, 0, 83, 0, 87, 0, 87, 0, 74, 0, 84, 0, 128, 0, 80, 0, 78, 0, 129, 0, 85, 0, 86, 0, 125, 0, 90, 0, 99, 0, 99, 0, 94, 0, 100, 0, 118, 0, 96, 0, 101, 0, 101, 0, 88, 0, 98, 0, 122, 0, 93, 0, 90, 0, 121, 0, 99, 0, 100, 0, 112, 0, 105, 0, 113, 0, 113, 0, 107, 0, 114, 0, 114, 0, 109, 0, 115, 0, 115, 0, 102, 0, 112, 0, 103, 0, 108, 0, 105, 0, 115, 0, 113, 0, 114, 0, 98, 0, 117, 0, 116, 0, 121, 0, 119, 0, 118, 0, 89, 0, 120, 0, 117, 0, 101, 0, 116, 0, 118, 0, 116, 0, 122, 0, 125, 0, 118, 0, 125, 0, 121, 0, 76, 0, 130, 0, 128, 0, 84, 0, 127, 0, 126, 0, 117, 0, 124, 0, 122, 0, 100, 0, 123, 0, 121, 0, 87, 0, 126, 0, 129, 0, 86, 0, 130, 0, 129, 0, 58, 0, 55, 0, 60, 0, 0, 0, 7, 0, 5, 0, 2, 0, 39, 0, 4, 0, 39, 0, 2, 0, 33, 0, 41, 0, 3, 0, 45, 0, 5, 0, 12, 0, 11, 0, 6, 0, 8, 0, 1, 0, 8, 0, 9, 0, 3, 0, 9, 0, 7, 0, 4, 0, 13, 0, 19, 0, 14, 0, 10, 0, 13, 0, 6, 0, 13, 0, 14, 0, 8, 0, 14, 0, 12, 0, 9, 0, 16, 0, 22, 0, 21, 0, 56, 0, 49, 0, 54, 0, 19, 0, 17, 0, 14, 0, 15, 0, 18, 0, 10, 0, 21, 0, 28, 0, 25, 0, 68, 0, 65, 0, 72, 0, 20, 0, 23, 0, 15, 0, 23, 0, 24, 0, 18, 0, 3, 0, 32, 0, 1, 0, 30, 0, 31, 0, 23, 0, 31, 0, 28, 0, 24, 0, 43, 0, 36, 0, 42, 0, 49, 0, 37, 0, 48, 0, 46, 0, 40, 0, 44, 0, 37, 0, 38, 0, 34, 0, 44, 0, 43, 0, 46, 0, 54, 0, 48, 0, 52, 0, 43, 0, 50, 0, 36, 0, 44, 0, 51, 0, 43, 0, 38, 0, 49, 0, 44, 0, 11, 0, 17, 0, 16, 0, 50, 0, 55, 0, 47, 0, 51, 0, 56, 0, 50, 0, 73, 0, 64, 0, 71, 0, 64, 0, 57, 0, 62, 0, 59, 0, 52, 0, 57, 0, 54, 0, 59, 0, 56, 0, 23, 0, 26, 0, 30, 0, 71, 0, 62, 0, 69, 0, 59, 0, 64, 0, 61, 0, 63, 0, 60, 0, 65, 0, 61, 0, 66, 0, 60, 0, 31, 0, 27, 0, 29, 0, 67, 0, 73, 0, 70, 0, 66, 0, 73, 0, 65, 0, 17, 0, 24, 0, 22, 0, 127, 0, 77, 0, 126, 0, 79, 0, 81, 0, 85, 0, 130, 0, 83, 0, 129, 0, 82, 0, 74, 0, 87, 0, 130, 0, 80, 0, 128, 0, 126, 0, 85, 0, 129, 0, 122, 0, 90, 0, 125, 0, 91, 0, 94, 0, 99, 0, 119, 0, 96, 0, 118, 0, 95, 0, 88, 0, 101, 0, 124, 0, 93, 0, 122, 0, 125, 0, 99, 0, 121, 0, 103, 0, 105, 0, 112, 0, 104, 0, 107, 0, 113, 0, 106, 0, 109, 0, 114, 0, 110, 0, 102, 0, 115, 0, 111, 0, 108, 0, 103, 0, 112, 0, 113, 0, 115, 0, 89, 0, 117, 0, 98, 0, 123, 0, 119, 0, 121, 0, 97, 0, 120, 0, 89, 0, 98, 0, 116, 0, 101, 0, 117, 0, 122, 0, 116, 0, 116, 0, 125, 0, 118, 0, 83, 0, 130, 0, 76, 0, 75, 0, 127, 0, 84, 0, 120, 0, 124, 0, 117, 0, 92, 0, 123, 0, 100, 0, 84, 0, 126, 0, 87, 0, 80, 0, 130, 0, 86, 0, 55, 0, 61, 0, 60, 0 ),
"blend_shape_data": [  ],
"format": 2194903,
"index_count": 480,
"material": ExtResource( 5 ),
"primitive": 4,
"skeleton_aabb": [ AABB( -0.211496, -0.211496, -7.02151, 1.89218, 0.422993, 14.043 ), AABB( -0.211496, -0.211496, -7.02151, 1.89218, 0.422993, 14.043 ) ],
"vertex_count": 131
}

[sub_resource type="SphereShape" id=6]
margin = 0.01
radius = 0.05

[node name="Bow" instance=ExtResource( 1 )]
script = ExtResource( 11 )

[node name="CollisionShape" parent="." index="0"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.0601349, 0, 0 )
shape = SubResource( 1 )

[node name="bow" parent="." index="1" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0601349, 0, 0 )

[node name="Cube" parent="bow/Armature/Skeleton" index="0"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="GrabPointHandLeft" parent="." index="2" instance=ExtResource( 3 )]
transform = Transform( 1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, -0.158333, -0.00862563, 0 )
hand_pose = SubResource( 2 )

[node name="GrabPointHandRight" parent="." index="3" instance=ExtResource( 4 )]
transform = Transform( 1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, -0.155855, 0, 0 )
hand_pose = SubResource( 3 )

[node name="XRToolsHighlightVisible" type="Spatial" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0601349, 0, 0 )
script = ExtResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="XRToolsHighlightVisible" index="0"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 6 )

[node name="PullPivot" type="Spatial" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.100598, 0, 0 )

[node name="PullPick" parent="PullPivot" index="0" instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 0
mode = 1

[node name="CollisionShape" parent="PullPivot/PullPick" index="0"]
shape = SubResource( 6 )

[node name="GrabPointHandLeft" parent="PullPivot/PullPick" index="1" instance=ExtResource( 3 )]
transform = Transform( 1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, -0.0917843, -0.0158276, -0.0451302 )

[node name="GrabPointHandRight" parent="PullPivot/PullPick" index="2" instance=ExtResource( 4 )]
transform = Transform( 1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, -0.092, 0.016, -0.045 )

[node name="ArrowSnapZone" parent="PullPivot" index="1" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.354214, 0, 0 )
enabled = false
snap_require = "Arrow"

[node name="Timer" type="Timer" parent="PullPivot/ArrowSnapZone" index="1"]
one_shot = true

[connection signal="dropped" from="." to="." method="_on_Bow_dropped"]
[connection signal="picked_up" from="." to="." method="_on_Bow_picked_up"]
[connection signal="dropped" from="PullPivot/PullPick" to="." method="_on_PullPick_dropped"]
[connection signal="picked_up" from="PullPivot/PullPick" to="." method="_on_PullPick_picked_up"]
[connection signal="has_picked_up" from="PullPivot/ArrowSnapZone" to="." method="_on_ArrowSnapZone_has_picked_up"]
[connection signal="timeout" from="PullPivot/ArrowSnapZone/Timer" to="." method="_on_ArrowSnapZone_Timer_timeout"]

[editable path="bow"]
[editable path="PullPivot/PullPick"]
